--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,9 @@
   <small class="d-block mb-3">SINCE 2005</small>
 <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet" />
 
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/employee_styles.css') }}">
+<link rel="stylesheet" href="{{ url_for('static', filename='css/employee_forms.css') }}">
+
   <!-- Bootstrap 5 CSS -->
   <link
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
@@ -185,3 +188,4 @@
   <script src="{{ url_for('static', filename='js/base.js') }}"></script>
 </body>
 </html>
+
