--- a/templates/employees.html
+++ b/templates/employees.html
@@ -3,6 +3,8 @@
 <!-- Link the new CSS file -->
 <link rel="stylesheet" href="{{ url_for('static', filename='css/employee.css') }}">
 <script src="{{ url_for('static', filename='js/employee_add.js') }}"></script>
+<link rel="stylesheet" href="{{ url_for('static', filename='css/employee_styles.css') }}">
+<link rel="stylesheet" href="{{ url_for('static', filename='css/employee_forms.css') }}">
 
 <section class="page-section">
   
@@ -196,4 +198,5 @@
 <!-- Link the new JS file -->
 <script src="{{ url_for('static', filename='js/emp.js') }}"></script>
 {% endblock %}
+
 
