--- a/templates/employees.html
+++ b/templates/employees.html
@@ -1,9 +1,9 @@
 {% extends "base.html" %}
 {% block content %}
 <!-- Link the new premium CSS file -->
-<link rel="stylesheet" href="{{ url_for('static', filename='css/employee_premium.css') }}">
+<link rel="stylesheet" href="{{ url_for('static', filename='css/employee.css') }}">
 <!-- This page's custom JS for filtering -->
-<script src="{{ url_for('static', filename='js/employees.js') }}"></script>
+<script src="{{ url_for('static', filename='js/emp.js') }}"></script>
 
 <div class="container-fluid py-4">
 
@@ -179,3 +179,4 @@
   </div>
 </div>
 {% endblock %}
+
